cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory("microsoft/arrays_and_strings/two_sum" "microsoft/arrays_and_strings/two_sum/two_sum_output")
add_subdirectory("microsoft/trees_and_graphs/validate_binary_search_tree" "microsoft/trees_and_graphs/validate_binary_search_tree/validate_binary_search_tree_output")
add_subdirectory("microsoft/trees_and_graphs/inorder_traversal" "microsoft/trees_and_graphs/inorder_traversal/inorder_traversal_output")